--- a/booking.html
+++ b/booking.html
@@ -228,6 +228,7 @@
       <h2>Cupcakes</h2>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/474x/15/be/cc/15becce03c1381624a9ebcf9231e5f01.jpg" alt="Chocolate Cupcake" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Chocolate Cupcake</div>
         </div>
         <div class="item-price">RM5.99</div>
@@ -235,6 +236,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/474x/71/ee/fa/71eefaf4ddfdb4a1230131f0004c696b.jpg" alt="Blueberry Cupcake" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Blueberry Cupcake</div>
         </div>
         <div class="item-price">RM8.99</div>
@@ -242,6 +244,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/474x/84/84/74/848474d03851d427bd1420a7538a0e67.jpg" alt="Vanilla Cupcake" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Vanilla Cupcake</div>
         </div>
         <div class="item-price">RM5.99</div>
@@ -249,13 +252,15 @@
       </div>
       <div class="menu-item">
         <div>
-          <div class="item-name">Matcha Cupcake</div>
+		<img src="https://i.pinimg.com/474x/db/89/42/db89426aa753e74ba7dc88244189e41b.jpg" alt="Strawberry Cupcake" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+          <div class="item-name">Strawberry Cupcake</div>
         </div>
         <div class="item-price">RM6.99</div>
-        <button class="add-to-cart" data-name="Matcha Cupcake" data-price="6.99">Add</button>
+        <button class="add-to-cart" data-name="Strawberry Cupcake" data-price="6.99">Add</button>
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/474x/70/72/06/7072062be37a3202f8ec63c32e8e8021.jpg" alt="Red Velvet Cupcake" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Red Velvet</div>
         </div>
         <div class="item-price">RM5.99</div>
@@ -268,6 +273,7 @@
       <h2>Burgers</h2>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/736x/8b/36/9f/8b369fefca44952ef36cc09f830c00e7.jpg" alt="Beef Burger" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Beef Burger</div>
         </div>
         <div class="item-price">RM11.99</div>
@@ -275,6 +281,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/736x/9b/d9/44/9bd94437a9cce778b5a58bcbfafcdbc7.jpg" alt="Spicy Burger" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Spicy Burger</div>
         </div>
         <div class="item-price">RM9.99</div>
@@ -282,6 +289,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/474x/9c/8e/37/9c8e3701bf87d86d955299db4a74c102.jpg" alt="Chicken Burger" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Chicken Burger</div>
         </div>
         <div class="item-price">RM10.99</div>
@@ -289,6 +297,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/474x/e3/45/31/e345319a40ce814122d6e1467404f6a3.jpg" alt="Cheese Burger" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Cheese Burger</div>
         </div>
         <div class="item-price">RM12.99</div>
@@ -296,6 +305,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/736x/a8/c1/00/a8c10079179e801619c0703c2cb86ad3.jpg" alt="Vegie Burger" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Veggie Burger</div>
         </div>
         <div class="item-price">RM10.99</div>
@@ -308,6 +318,7 @@
       <h2>Cookies</h2>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/736x/59/6d/7d/596d7de69016f1617946e8ef3f2ad52c.jpg" alt="Choco Chip" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Choco Chip</div>
         </div>
         <div class="item-price">RM6.99</div>
@@ -315,6 +326,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/474x/0e/8f/6e/0e8f6e56ef7bc1e02c6386e9f12e1493.jpg" alt="Rainbow" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Rainbow</div>
         </div>
         <div class="item-price">RM6.99</div>
@@ -322,6 +334,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/736x/9c/28/20/9c28202aadf1dd004ad482307fea6d47.jpg" alt="Oatmeal" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Oatmeal</div>
         </div>
         <div class="item-price">RM4.99</div>
@@ -329,6 +342,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/736x/11/33/a7/1133a7302f65a10d38995446be3e07ac.jpg" alt="Double Choco" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Double Choco</div>
         </div>
         <div class="item-price">RM7.99</div>
@@ -336,6 +350,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/736x/c4/1d/85/c41d85daf31fb13bd0fba23d81f9a434.jpg" alt="Peanut Butter" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Peanut Butter</div>
         </div>
         <div class="item-price">RM6.99</div>
@@ -348,38 +363,43 @@
       <h2>Juices</h2>
       <div class="menu-item">
         <div>
-          <div class="item-name">Orange Juice (Hot)</div>
+		<img src="https://i.pinimg.com/736x/fa/53/67/fa5367f76ac4fb9dba27f0f0018400ae.jpg" alt="Orange Juice" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+          <div class="item-name">Orange</div>
         </div>
         <div class="item-price">RM3.99</div>
-        <button class="add-to-cart" data-name="Orange Juice (Hot)" data-price="3.99">Add</button>
+        <button class="add-to-cart" data-name="Orange Juice" data-price="3.99">Add</button>
       </div>
       <div class="menu-item">
         <div>
-          <div class="item-name">Orange Juice (Ice)</div>
+		<img src="https://i.pinimg.com/736x/1d/d0/64/1dd06469c865bb9d4a84f8b8c1204845.jpg" alt="Apple Juice" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+          <div class="item-name">Apple</div>
         </div>
         <div class="item-price">RM4.99</div>
-        <button class="add-to-cart" data-name="Orange Juice (Ice)" data-price="4.99">Add</button>
+        <button class="add-to-cart" data-name="Apple Juice" data-price="4.99">Add</button>
       </div>
       <div class="menu-item">
         <div>
-          <div class="item-name">Apple Juice (Hot)</div>
+		<img src="https://i.pinimg.com/736x/f0/ae/a0/f0aea0dc92598f42a09e2e43fbb195c6.jpg" alt="Watermelon Juice" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+          <div class="item-name">Watermelon</div>
         </div>
         <div class="item-price">RM3.99</div>
-        <button class="add-to-cart" data-name="Apple Juice (Hot)" data-price="3.99">Add</button>
+        <button class="add-to-cart" data-name="Watermelon Juice" data-price="3.99">Add</button>
       </div>
       <div class="menu-item">
         <div>
-          <div class="item-name">Apple Juice (Ice)</div>
+		<img src="https://i.pinimg.com/736x/4c/c4/9d/4cc49d102bf1d2a2d3590d5dea3ef19f.jpg" alt="Pineapple Juice" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+          <div class="item-name">Pineapple</div>
         </div>
         <div class="item-price">RM4.99</div>
-        <button class="add-to-cart" data-name="Apple Juice (Ice)" data-price="4.99">Add</button>
+        <button class="add-to-cart" data-name="Pineapple Juice" data-price="4.99">Add</button>
       </div>
       <div class="menu-item">
         <div>
-          <div class="item-name">Mango Juice (Small)</div>
+		<img src="https://i.pinimg.com/736x/70/4e/0f/704e0fb8d99cf1c6d59a0b1d4d1f25b1.jpg" alt="Mango Juice" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+          <div class="item-name">Mango</div>
         </div>
         <div class="item-price">RM5.00</div>
-        <button class="add-to-cart" data-name="Mango Juice (Small)" data-price="5.00">Add</button>
+        <button class="add-to-cart" data-name="Mango Juice" data-price="5.00">Add</button>
       </div>
     </div>
 
@@ -388,6 +408,7 @@
       <h2>Chicken/Beef</h2>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/474x/8b/63/28/8b6328fa7cec955b26560b6a4a2911e8.jpg" alt="Grilled Chicken" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Grilled Chicken</div>
         </div>
         <div class="item-price">RM39.99</div>
@@ -395,6 +416,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/474x/64/c6/c3/64c6c3752329400aa4ecac9dabf2bc38.jpg" alt="Fried Chicken" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Fried Chicken</div>
         </div>
         <div class="item-price">RM12.99</div>
@@ -402,6 +424,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/736x/3d/8d/89/3d8d8952e8526c46ba7c429f11e08204.jpg" alt="BBQ Chicken" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">BBQ Chicken</div>
         </div>
         <div class="item-price">RM49.99</div>
@@ -409,6 +432,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/736x/c0/c0/76/c0c07675f324083f7f786f04f979d31a.jpg" alt="Beef Steak" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Beef Steak</div>
         </div>
         <div class="item-price">RM18.99</div>
@@ -416,6 +440,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/474x/d0/aa/52/d0aa521546872cba34257b91c71589f7.jpg" alt="Beef Rendang" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Beef Rendang</div>
         </div>
         <div class="item-price">RM16.99</div>
@@ -428,6 +453,7 @@
       <h2>Coffees</h2>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/474x/85/85/11/85851111fca1556b7a272dd4d7df2943.jpg" alt="Espresso" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Espresso</div>
         </div>
         <div class="item-price">RM5.99</div>
@@ -435,6 +461,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/474x/55/f8/7b/55f87b082c2e6f655957e29725e8a0d8.jpg" alt="Latte" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Latte</div>
         </div>
         <div class="item-price">RM5.99</div>
@@ -442,6 +469,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/474x/bd/f8/20/bdf82044e49492984450d56ca21430ed.jpg" alt="Cappucino" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Cappuccino</div>
         </div>
         <div class="item-price">RM5.99</div>
@@ -449,6 +477,7 @@
       </div>
       <div class="menu-item">
         <div>
+		<img src="https://i.pinimg.com/736x/83/28/b6/8328b6f35d523c0dced5872e3ed2624b.jpg" alt="Americano" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Americano</div>
         </div>
         <div class="item-price">RM5.99</div>
@@ -456,10 +485,11 @@
       </div>
       <div class="menu-item">
         <div>
-          <div class="item-name">Matcha</div>
+		<img src="https://i.pinimg.com/474x/c5/88/39/c58839e481ed23986d843777d17c6cb1.jpg" alt="White Coffee" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+          <div class="item-name">White Coffee</div>
         </div>
         <div class="item-price">RM5.99</div>
-        <button class="add-to-cart" data-name="Matcha" data-price="5.99">Add</button>
+        <button class="add-to-cart" data-name="White Coffee" data-price="5.99">Add</button>
       </div>
     </div>
   </div>
@@ -499,7 +529,7 @@
       if (isCartVisible) {
         cartContainer.style.bottom = '0';
       } else {
-        cartContainer.style.bottom = `-${cartContainer.offsetHeight}px`;
+        cartContainer.style.bottom = -${cartContainer.offsetHeight}px;
       }
     }
 
@@ -581,12 +611,12 @@
 
       let orderSummary = 'Order Summary:\n\n';
       cart.forEach(item => {
-        orderSummary += `${item.name} × ${item.quantity} = RM${(item.price * item.quantity).toFixed(2)}\n`;
+        orderSummary += ${item.name} × ${item.quantity} = RM${(item.price * item.quantity).toFixed(2)}\n;
       });
 
-      orderSummary += `\nSubtotal: RM${subtotalEl.textContent}`;
-      orderSummary += `\nDelivery Fee: RM${deliveryFee.toFixed(2)}`;
-      orderSummary += `\nTotal: RM${totalEl.textContent}`;
+      orderSummary += \nSubtotal: RM${subtotalEl.textContent};
+      orderSummary += \nDelivery Fee: RM${deliveryFee.toFixed(2)};
+      orderSummary += \nTotal: RM${totalEl.textContent};
 
       alert(orderSummary);
       window.location.href = "payment.html";
@@ -595,7 +625,7 @@
     // Initialize
     updateCart();
     // Start with cart hidden
-    cartContainer.style.bottom = `-${cartContainer.offsetHeight}px`;
+    cartContainer.style.bottom = -${cartContainer.offsetHeight}px;
   </script>
 </body>
 </html>
