--- a/booking.html
+++ b/booking.html
@@ -235,7 +235,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/474x/71/ee/fa/71eefaf4ddfdb4a1230131f0004c696b.jpg" alt="Blueberry Cupcake" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/474x/71/ee/fa/71eefaf4ddfdb4a1230131f0004c696b.jpg" alt="Blueberry Cupcake" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Blueberry Cupcake</div>
         </div>
         <div class="item-price">RM8.99</div>
@@ -243,7 +243,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/474x/84/84/74/848474d03851d427bd1420a7538a0e67.jpg" alt="Vanilla Cupcake" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/474x/84/84/74/848474d03851d427bd1420a7538a0e67.jpg" alt="Vanilla Cupcake" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Vanilla Cupcake</div>
         </div>
         <div class="item-price">RM5.99</div>
@@ -251,7 +251,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/474x/db/89/42/db89426aa753e74ba7dc88244189e41b.jpg" alt="Strawberry Cupcake" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/474x/db/89/42/db89426aa753e74ba7dc88244189e41b.jpg" alt="Strawberry Cupcake" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Strawberry Cupcake</div>
         </div>
         <div class="item-price">RM6.99</div>
@@ -259,7 +259,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/474x/70/72/06/7072062be37a3202f8ec63c32e8e8021.jpg" alt="Red Velvet Cupcake" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/474x/70/72/06/7072062be37a3202f8ec63c32e8e8021.jpg" alt="Red Velvet Cupcake" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Red Velvet</div>
         </div>
         <div class="item-price">RM5.99</div>
@@ -272,7 +272,7 @@
       <h2>Burgers</h2>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/736x/8b/36/9f/8b369fefca44952ef36cc09f830c00e7.jpg" alt="Beef Burger" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/736x/8b/36/9f/8b369fefca44952ef36cc09f830c00e7.jpg" alt="Beef Burger" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Beef Burger</div>
         </div>
         <div class="item-price">RM11.99</div>
@@ -280,7 +280,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/736x/9b/d9/44/9bd94437a9cce778b5a58bcbfafcdbc7.jpg" alt="Spicy Burger" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/736x/9b/d9/44/9bd94437a9cce778b5a58bcbfafcdbc7.jpg" alt="Spicy Burger" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Spicy Burger</div>
         </div>
         <div class="item-price">RM9.99</div>
@@ -288,7 +288,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/474x/9c/8e/37/9c8e3701bf87d86d955299db4a74c102.jpg" alt="Chicken Burger" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/474x/9c/8e/37/9c8e3701bf87d86d955299db4a74c102.jpg" alt="Chicken Burger" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Chicken Burger</div>
         </div>
         <div class="item-price">RM10.99</div>
@@ -296,7 +296,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/474x/e3/45/31/e345319a40ce814122d6e1467404f6a3.jpg" alt="Cheese Burger" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/474x/e3/45/31/e345319a40ce814122d6e1467404f6a3.jpg" alt="Cheese Burger" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Cheese Burger</div>
         </div>
         <div class="item-price">RM12.99</div>
@@ -304,7 +304,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/736x/a8/c1/00/a8c10079179e801619c0703c2cb86ad3.jpg" alt="Vegie Burger" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/736x/a8/c1/00/a8c10079179e801619c0703c2cb86ad3.jpg" alt="Vegie Burger" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Veggie Burger</div>
         </div>
         <div class="item-price">RM10.99</div>
@@ -317,7 +317,7 @@
       <h2>Cookies</h2>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/736x/59/6d/7d/596d7de69016f1617946e8ef3f2ad52c.jpg" alt="Choco Chip" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/736x/59/6d/7d/596d7de69016f1617946e8ef3f2ad52c.jpg" alt="Choco Chip" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Choco Chip</div>
         </div>
         <div class="item-price">RM6.99</div>
@@ -325,7 +325,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/474x/0e/8f/6e/0e8f6e56ef7bc1e02c6386e9f12e1493.jpg" alt="Rainbow" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/474x/0e/8f/6e/0e8f6e56ef7bc1e02c6386e9f12e1493.jpg" alt="Rainbow" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Rainbow</div>
         </div>
         <div class="item-price">RM6.99</div>
@@ -333,7 +333,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/736x/9c/28/20/9c28202aadf1dd004ad482307fea6d47.jpg" alt="Oatmeal" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/736x/9c/28/20/9c28202aadf1dd004ad482307fea6d47.jpg" alt="Oatmeal" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Oatmeal</div>
         </div>
         <div class="item-price">RM4.99</div>
@@ -341,7 +341,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/736x/11/33/a7/1133a7302f65a10d38995446be3e07ac.jpg" alt="Double Choco" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/736x/11/33/a7/1133a7302f65a10d38995446be3e07ac.jpg" alt="Double Choco" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Double Choco</div>
         </div>
         <div class="item-price">RM7.99</div>
@@ -349,7 +349,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/736x/c4/1d/85/c41d85daf31fb13bd0fba23d81f9a434.jpg" alt="Peanut Butter" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/736x/c4/1d/85/c41d85daf31fb13bd0fba23d81f9a434.jpg" alt="Peanut Butter" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Peanut Butter</div>
         </div>
         <div class="item-price">RM6.99</div>
@@ -362,7 +362,7 @@
       <h2>Juices</h2>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/736x/fa/53/67/fa5367f76ac4fb9dba27f0f0018400ae.jpg" alt="Orange Juice" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/736x/fa/53/67/fa5367f76ac4fb9dba27f0f0018400ae.jpg" alt="Orange Juice" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Orange</div>
         </div>
         <div class="item-price">RM3.99</div>
@@ -370,7 +370,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/736x/1d/d0/64/1dd06469c865bb9d4a84f8b8c1204845.jpg" alt="Apple Juice" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/736x/1d/d0/64/1dd06469c865bb9d4a84f8b8c1204845.jpg" alt="Apple Juice" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Apple</div>
         </div>
         <div class="item-price">RM4.99</div>
@@ -378,7 +378,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/736x/f0/ae/a0/f0aea0dc92598f42a09e2e43fbb195c6.jpg" alt="Watermelon Juice" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/736x/f0/ae/a0/f0aea0dc92598f42a09e2e43fbb195c6.jpg" alt="Watermelon Juice" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Watermelon</div>
         </div>
         <div class="item-price">RM3.99</div>
@@ -386,7 +386,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/736x/4c/c4/9d/4cc49d102bf1d2a2d3590d5dea3ef19f.jpg" alt="Pineapple Juice" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/736x/4c/c4/9d/4cc49d102bf1d2a2d3590d5dea3ef19f.jpg" alt="Pineapple Juice" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Pineapple</div>
         </div>
         <div class="item-price">RM4.99</div>
@@ -394,7 +394,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/736x/70/4e/0f/704e0fb8d99cf1c6d59a0b1d4d1f25b1.jpg" alt="Mango Juice" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/736x/70/4e/0f/704e0fb8d99cf1c6d59a0b1d4d1f25b1.jpg" alt="Mango Juice" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Mango</div>
         </div>
         <div class="item-price">RM5.00</div>
@@ -407,7 +407,7 @@
       <h2>Chicken/Beef</h2>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/474x/8b/63/28/8b6328fa7cec955b26560b6a4a2911e8.jpg" alt="Grilled Chicken" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/474x/8b/63/28/8b6328fa7cec955b26560b6a4a2911e8.jpg" alt="Grilled Chicken" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Grilled Chicken</div>
         </div>
         <div class="item-price">RM39.99</div>
@@ -415,7 +415,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/474x/64/c6/c3/64c6c3752329400aa4ecac9dabf2bc38.jpg" alt="Fried Chicken" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/474x/64/c6/c3/64c6c3752329400aa4ecac9dabf2bc38.jpg" alt="Fried Chicken" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Fried Chicken</div>
         </div>
         <div class="item-price">RM12.99</div>
@@ -423,7 +423,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/736x/3d/8d/89/3d8d8952e8526c46ba7c429f11e08204.jpg" alt="BBQ Chicken" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/736x/3d/8d/89/3d8d8952e8526c46ba7c429f11e08204.jpg" alt="BBQ Chicken" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">BBQ Chicken</div>
         </div>
         <div class="item-price">RM49.99</div>
@@ -431,7 +431,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/736x/c0/c0/76/c0c07675f324083f7f786f04f979d31a.jpg" alt="Beef Steak" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/736x/c0/c0/76/c0c07675f324083f7f786f04f979d31a.jpg" alt="Beef Steak" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Beef Steak</div>
         </div>
         <div class="item-price">RM18.99</div>
@@ -439,7 +439,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/474x/d0/aa/52/d0aa521546872cba34257b91c71589f7.jpg" alt="Beef Rendang" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/474x/d0/aa/52/d0aa521546872cba34257b91c71589f7.jpg" alt="Beef Rendang" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Beef Rendang</div>
         </div>
         <div class="item-price">RM16.99</div>
@@ -452,7 +452,7 @@
       <h2>Coffees</h2>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/474x/85/85/11/85851111fca1556b7a272dd4d7df2943.jpg" alt="Espresso" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/474x/85/85/11/85851111fca1556b7a272dd4d7df2943.jpg" alt="Espresso" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Espresso</div>
         </div>
         <div class="item-price">RM5.99</div>
@@ -460,7 +460,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/474x/55/f8/7b/55f87b082c2e6f655957e29725e8a0d8.jpg" alt="Latte" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/474x/55/f8/7b/55f87b082c2e6f655957e29725e8a0d8.jpg" alt="Latte" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Latte</div>
         </div>
         <div class="item-price">RM5.99</div>
@@ -468,7 +468,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/474x/bd/f8/20/bdf82044e49492984450d56ca21430ed.jpg" alt="Cappucino" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/474x/bd/f8/20/bdf82044e49492984450d56ca21430ed.jpg" alt="Cappucino" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Cappuccino</div>
         </div>
         <div class="item-price">RM5.99</div>
@@ -476,7 +476,7 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/736x/83/28/b6/8328b6f35d523c0dced5872e3ed2624b.jpg" alt="Americano" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/736x/83/28/b6/8328b6f35d523c0dced5872e3ed2624b.jpg" alt="Americano" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">Americano</div>
         </div>
         <div class="item-price">RM5.99</div>
@@ -484,21 +484,13 @@
       </div>
       <div class="menu-item">
         <div>
-		<img src="https://i.pinimg.com/474x/c5/88/39/c58839e481ed23986d843777d17c6cb1.jpg" alt="White Coffee" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
+        <img src="https://i.pinimg.com/474x/c5/88/39/c58839e481ed23986d843777d17c6cb1.jpg" alt="White Coffee" style="width: 50px; height: 50px; object-fit: cover; margin-right: 10px;">
           <div class="item-name">White Coffee</div>
         </div>
         <div class="item-price">RM5.99</div>
         <button class="add-to-cart" data-name="White Coffee" data-price="5.99">Add</button>
       </div>
     </div>
-  </div>
-
-  <div class="cart-container" id="cart-container">
-  <div class="cart-header" onclick="toggleCartCollapse()">
-    <h2>Your Cart (<span id="cart-header-count">0</span>)</h2>
-    <svg class="toggle-arrow" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-      <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
-    </svg>
   </div>
 
   <div class="cart-container" id="cart-container">
@@ -536,7 +528,7 @@
       if (isCartVisible) {
         cartContainer.style.bottom = '0';
       } else {
-        cartContainer.style.bottom = -${cartContainer.offsetHeight}px;
+        cartContainer.style.bottom = `-${cartContainer.offsetHeight}px`;
       }
     }
 
@@ -610,8 +602,6 @@
       }
     }
 
-	
-
     function checkout() {
       if (cart.length === 0) {
         alert('Your cart is empty!');
@@ -620,70 +610,21 @@
 
       let orderSummary = 'Order Summary:\n\n';
       cart.forEach(item => {
-        orderSummary += ${item.name} × ${item.quantity} = RM${(item.price * item.quantity).toFixed(2)}\n;
+        orderSummary += `${item.name} × ${item.quantity} = RM${(item.price * item.quantity).toFixed(2)}\n`;
       });
 
-      orderSummary += \nSubtotal: RM${subtotalEl.textContent};
-      orderSummary += \nDelivery Fee: RM${deliveryFee.toFixed(2)};
-      orderSummary += \nTotal: RM${totalEl.textContent};
+      orderSummary += `\nSubtotal: RM${subtotalEl.textContent}`;
+      orderSummary += `\nDelivery Fee: RM${deliveryFee.toFixed(2)}`;
+      orderSummary += `\nTotal: RM${totalEl.textContent}`;
 
       alert(orderSummary);
       window.location.href = "payment.html";
     }
 
-	
-function calculateDiscountedPrice(price) {
-    let discount = 0;
-
-    if (price >= 100) {
-        discount = 0.10;
-    } else if (price > 80) {
-        discount = 0.05;
-    }
-
-    return price - (price * discount);
-}
-
-function updateCart() {
-    cartItemsEl.innerHTML = '';
-    let subtotal = 0;
-    let itemCount = 0;
-
-    cart.forEach(item => {
-        const itemTotal = item.price * item.quantity;
-        subtotal += itemTotal;
-        itemCount += item.quantity;
-
-        const discountedTotal = calculateDiscountedPrice(itemTotal);
-
-        const cartItemEl = document.createElement('div');
-        cartItemEl.className = 'cart-item';
-        cartItemEl.innerHTML = `
-          <div>
-            <div>${item.name}</div>
-            <div>RM${item.price.toFixed(2)} × ${item.quantity}</div>
-          </div>
-          <div class="quantity-controls">
-            <button class="quantity-btn" onclick="changeQuantity('${item.name}', -1)">-</button>
-            <span>${item.quantity}</span>
-            <button class="quantity-btn" onclick="changeQuantity('${item.name}', 1)">+</button>
-            <span>RM${discountedTotal.toFixed(2)}</span>
-          </div>
-        `;
-        cartItemsEl.appendChild(cartItemEl);
-    });
-
-    const discountedSubtotal = calculateDiscountedPrice(subtotal);
-    subtotalEl.textContent = discountedSubtotal.toFixed(2);
-    totalEl.textContent = (discountedSubtotal + deliveryFee).toFixed(2);
-    cartCountEl.textContent = itemCount;
-    cartHeaderCountEl.textContent = itemCount;
-}
-
     // Initialize
     updateCart();
     // Start with cart hidden
-    cartContainer.style.bottom = -${cartContainer.offsetHeight}px;
+    cartContainer.style.bottom = `-${cartContainer.offsetHeight}px`;
   </script>
 </body>
 </html>
