--- a/booking.html
+++ b/booking.html
@@ -228,7 +228,7 @@
   </style>
 </head>
 <body>
-  <h1>MyCafe Menu</h1>
+  <h1>Melaka Town Cafe Menu</h1>
 
   <button class="cart-toggle-btn" onclick="toggleCart()">
     <span id="cart-count">0</span>
